backend/check_results_v2_utf8.txt
cargo :     Checking 
inheritx-backend 
v0.1.0 (C:\Users\HomeP
C\Desktop\DRIPS 
W3\InheritX\backend)
At line:1 char:1
+ cargo check > 
check_results_v2.txt 
2>&1
+ ~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~
    + CategoryInfo    
          : NotSpeci  
  fied: (    Checki   
 ng in...heritX\ba    
ckend):String) []    
, RemoteException
    + FullyQualifiedE 
   rrorId : NativeCo  
  mmandError
 
error[E0252]: the 
name `BTreeMap` is 
defined multiple times
  --> 
src\service.rs:23:24
   |
13 | use std::collecti
ons::BTreeMap;
   |     -------------
------------- 
previous import of 
the type `BTreeMap` 
here
...
23 | use std::collecti
ons::{BTreeMap, 
HashSet};
   |                  
      ^^^^^^^^--
   |                  
      |
   |                  
      `BTreeMap` 
reimported here
   |                  
      help: remove 
unnecessary import
   |
   = note: `BTreeMap` 
must be defined only 
once in the type 
namespace of this 
module

warning: unused 
import: `BTreeMap`
  --> 
src\service.rs:23:24
   |
23 | use std::collecti
ons::{BTreeMap, 
HashSet};
   |                  
      ^^^^^^^^
   |
   = note: `#[warn(unu
sed_imports)]` (part 
of `#[warn(unused)]`) 
on by default

For more information 
about this error, try 
`rustc --explain 
E0252`.
warning: 
`inheritx-backend` 
(lib) generated 1 
warning
error: could not 
compile 
`inheritx-backend` 
(lib) due to 1 
previous error; 1 
warning emitted
